completed html file

--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelancer Forum</title>
-    <link rel="stylesheet" href="sytle.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <div id="table"></div>
+    <h1>Freelancer Forum</h1>
+    <p><span id="average-price"></span></p>
+    <h2>Available Freelancers</h2>
+    <table class="center">
+        <thead>
+            <th>Name</th>
+            <th>Occupation</th>
+            <th>Starting Price</th>
+        </thead>
+    <tbody>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+    </table>
     <script src="main.js"></script>
 </body>
 </html>
